feat: update swagger document.
