# internal/presentation/rest/handler/pix_key.go
@@ -28,17 +28,13 @@ type handler struct {
 	findPixKeyUsecase     commands.FindPixKeyUsecase
 }
 
-// @BasePath /api/v1
-
 // RegisterPixKey godoc
 // @Summary Register Pix Key
-// @Schemes
 // @Description Register Pix Key
 // @Tags pix-keys
 // @Accept json
 // @Produce json
 // @Param request body request.RegisterPixKeyRequest true "Pix Key Request"
-// @Param Authorization header string true "Bearer token"
 // @Success 201 {object} response.RegisterPixKeyResponse
 // @Failure 500 {object} ErrorsResponse
 // @Failure 400 {object} ErrorsResponse
@@ -62,17 +58,13 @@ func (p *handler) RegisterPixKey(c *gin.Context) {
 	c.JSON(http.StatusCreated, response.PixKeyDomainToRegisterWebResponse(pixKeyDomain))
 }
 
-// @BasePath /api/v1
-
 // FindPixKeyByKey godoc
 // @Summary Find PixKey By Key
-// @Schemes
 // @Description Find PixKey By Key
 // @Tags pix-keys
 // @Accept json
 // @Produce json
 // @Param key path string true "Pix Key"
-// @Param Authorization header string true "Bearer token"
 // @Success 200 {object} response.RegisterPixKeyResponse
 // @Failure 500 {object} ErrorsResponse
 // @Failure 400 {object} ErrorsResponse
